se remueve lista de precios

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
-    <title>Spicyware | Consultora de software</title>
+    <title>Northern México | Consultora de software</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -58,7 +58,6 @@
               <li class="scroll-to-section"><a href="#services">Servicios</a></li>
               <li class="scroll-to-section"><a href="#about">Nosotros</a></li>
               <li class="scroll-to-section"><a href="#pricing">Precios</a></li>
-              <li class="scroll-to-section"><a href="#newsletter">Blog</a></li>              
               <li><div class="gradient-button"><a href="#newsletter"><i class="fa fa-sign-in-alt"></i> Contacto</a></div></li> 
             </ul>        
             <a class='menu-trigger'>
@@ -215,82 +214,6 @@
       </div>
     </div>
   </div>
-
-  <div id="pricing" class="pricing-tables">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 offset-lg-2">
-          <div class="section-heading">
-            <h4>Lo que Nos Hace Diferentes</h4>
-            <img src="assets/images/heading-line-dec.png" alt="">
-            <p>Sabemos que iniciar un proyecto web puede ser complicado, ¡pero queremos hacerlo más fácil para ti! Por eso, ofrecemos algo que pocas agencias se atreven a hacer:</p>
-            <h1>¡Un sitio web completamente gratis!</h1>
-            <p>Sí, leíste bien. Creamos tu sitio web básico sin costo alguno. Tú solo pagas una pequeña renta mensual para mantenerlo en línea, sin preocupaciones.</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="pricing-item-regular">
-            <span class="price">$299/mes</span>
-            <h4>Básico</h4>
-            <div class="icon">
-              <img src="assets/images/pricing-table-01.png" alt="">
-            </div>
-            <ul>
-              <li>Hasta 5 secciones</li>
-              <li>Diseño web adaptable</li>
-              <li class="non-function">Incluye soporte</li>
-              <li class="non-function">Hasta 10 cambios de contenido / mes</li>
-              <li class="non-function">Formulario de contacto</li>
-              <li class="non-function">Formulario de cotización</li>
-            </ul>
-            <div class="border-button">
-              <a href="#newsletter">¡Pedirlo ahora!</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="pricing-item-pro">
-            <span class="price">$499/mes</span>
-            <h4>Profesional</h4>
-            <div class="icon">
-              <img src="assets/images/pricing-table-01.png" alt="">
-            </div>
-            <ul>
-              <li>Hasta 10 secciones</li>
-              <li>Diseño web adaptable</li>
-              <li>Incluye soporte</li>
-              <li>Hasta 10 cambios de contenido / mes</li>
-              <li>Formulario de contacto</li>
-              <li class="non-function">Formulario de cotización</li>
-            </ul>
-            <div class="border-button">
-              <a href="#newsletter">¡Pedirlo ahora!</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="pricing-item-regular">
-            <span class="price">$799/mes</span>
-            <h4>Premium</h4>
-            <div class="icon">
-              <img src="assets/images/pricing-table-01.png" alt="">
-            </div>
-            <ul>
-              <li>Hasta 15 secciones</li>
-              <li>Diseño web adaptable</li>
-              <li>Incluye soporte</li>
-              <li>Hasta 25 cambios de contenido</li>
-              <li>Formulario de contacto</li>
-              <li>Formulario de cotización</li>
-            </ul>
-            <div class="border-button">
-              <a href="#newsletter">¡Pedirlo ahora!</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> 
 
   <footer id="newsletter">
     <div class="container">
