cambio de icono

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-              <img src="assets/images/jalapeno.png" alt="Bunny Software">
+              <img src="assets/images/northern-icon.png" alt="Bunny Software">
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
@@ -301,15 +301,14 @@
           <div class="footer-widget">
             <h4>Nostros</h4>
             <div class="logo">
-              <img src="assets/images/jalapeno.png" alt="Jalapeno Consultora">
+              <img src="assets/images/northern-icon.png" alt="Northern México">
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
           </div>
         </div>
         <div class="col-lg-12">
           <div class="copyright-text">
-            <p>Copyright © 2022 Chain App Dev Company. All Rights Reserved. 
-          <br>Design: <a href="https://templatemo.com/" target="_blank" title="css templates">TemplateMo</a></p>
+            <p>2025 Northern México.
           </div>
         </div>
       </div>
