ajustes nuevo logo mejorado

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/templatemo-chain-app-dev.css">
     <link rel="stylesheet" href="assets/css/animated.css">
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -50,7 +49,7 @@
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-              <img src="assets/images/northern-logo.jpg" alt="Bunny Software">
+              <img src="assets/images/northern-logo-blue.png" alt="Bunny Software">
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
@@ -58,7 +57,6 @@
               <li class="scroll-to-section"><a href="#top" class="active">Inicio</a></li>
               <li class="scroll-to-section"><a href="#services">Servicios</a></li>
               <li class="scroll-to-section"><a href="#about">Nosotros</a></li>
-              <li class="scroll-to-section"><a href="#pricing">Precios</a></li>
               <li><div class="gradient-button"><a href="#newsletter"><i class="fa fa-sign-in-alt"></i> Contacto</a></div></li> 
             </ul>        
             <a class='menu-trigger'>
@@ -172,7 +170,7 @@
           <div class="section-heading">
             <h4>¿Quiénes Somos?</h4>
             <img src="assets/images/heading-line-dec.png" alt="">
-            <p>Somos una agencia pequeña, pero con grandes aspiraciones y un equipo que combina experiencia, creatividad y pasión por lo que hacemos.</p>
+            <p>En Northern Mexico, somos una consultora de software especializada en desarrollo web y aplicaciones híbridas, comprometida con impulsar el crecimiento digital de nuestros clientes.</p>
           </div>
           <div class="row">
             <div class="col-lg-6">
@@ -190,17 +188,17 @@
             <div class="col-lg-6">
               <div class="box-item">
                 <h4><a href="#">Programadores jr</a></h4>
-                <p class="line-height-normal">Jóvenes talentosos y comprometidos.</p>
+                <p class="line-height-normal">Talentosos y comprometidos.</p>
               </div>
             </div>
             <div class="col-lg-6">
               <div class="box-item">
                 <h4><a href="#">Equipo de trabajo</a></h4>
-                <p class="line-height-normal">Apasionados por la tecnología, cercano y siempre enfocado.</p>
+                <p class="line-height-normal">Cercano y siempre enfocado.</p>
               </div>
             </div>
             <div class="col-lg-12">
-              <p>Nos definimos como un grupo apasionado por la tecnología, cercano y siempre enfocado en brindarte soluciones personalizadas que realmente funcionen para ti. ¡Estamos aquí para hacer que tu proyecto sea un éxito.</p>
+              <p>Con una combinación única de creatividad, experiencia técnica y enfoque estratégico, ayudamos a empresas y profesionales a transformar sus ideas en soluciones digitales innovadoras y funcionales.</p>
               <div class="gradient-button">
                 <a href="#newsletter">Cotizar un proyecto</a>
               </div>
@@ -222,7 +220,7 @@
         <div class="col-lg-8 offset-lg-2">
           <div class="section-heading">
             <h4>Contáctanos</h4>
-            <h4>¿Tienes una idea en mente? ¿Quieres un plan a la medida o cotizar un proyecto web o una aplicación móvil? 🚀 ¡Estamos aquí para ayudarte!</h4>
+            <h5 class="text-center text-white">¿Tienes una idea en mente? ¿Quieres un plan a la medida o cotizar un proyecto web o una aplicación móvil? 🚀 ¡Estamos aquí para ayudarte!</h5>
           </div>
         </div>
         <div class="col-lg-6 offset-lg-3">
@@ -268,26 +266,20 @@
           <div class="footer-widget">
             <h4>Nosotros</h4>
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Testimonials</a></li>
-              <li><a href="#">Pricing</a></li>
-            </ul>
-            <ul>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Testimonials</a></li>
-              <li><a href="#">Pricing</a></li>
+              <li><a href="#">Inicio</a></li>
+              <li><a href="#">Servicios</a></li>
+              <li><a href="#">Nosotros</a></li>
+              <li><a href="#">Contacto</a></li>
             </ul>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="footer-widget">
-            <h4>Useful Links</h4>
+            <h4>Utilidades</h4>
             <ul>
-              <li><a href="#">Free Apps</a></li>
-              <li><a href="#">App Engine</a></li>
-              <li><a href="#">Programming</a></li>
+              <li><a href="https://wordpress.com/es/">Wordpress</a></li>
+              <li><a href="https://woocommerce.com/es/">Woocommerce</a></li>
+              <li><a href="https://ionicframework.com/">Ionic</a></li>
               <li><a href="#">Development</a></li>
               <li><a href="#">App News</a></li>
             </ul>
@@ -302,7 +294,7 @@
           <div class="footer-widget">
             <h4>Nosotros</h4>
             <div class="logo">
-              <img src="assets/images/northern-logo.jpg" alt="Northern México">
+              <img src="assets/images/northern-logo-white.png" alt="Northern México">
             </div>
             <p>En Northern Mexico, somos una consultora de software especializada en desarrollo web y aplicaciones híbridas, comprometida con impulsar el crecimiento digital de nuestros clientes. Con una combinación única de creatividad, experiencia técnica y enfoque estratégico, ayudamos a empresas y profesionales a transformar sus ideas en soluciones digitales innovadoras y funcionales.</p>
           </div>
